--- a/Problem-Set3/Problem-Set3/Project1/Project1.vcxproj
+++ b/Problem-Set3/Problem-Set3/Project1/Project1.vcxproj
@@ -109,14 +109,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;IMGUI_IMPL_OPENGL_LOADER_CUSTOM;_WINSOCK_DEPRECATED_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Angel\Desktop\PSET3\ParticleSimulator-CPP\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;C:\Users\Angel\Desktop\PSET3\ParticleSimulator-CPP\imgui-master\imgui-master;C:\Users\Angel\Desktop\PSET3\ParticleSimulator-CPP\imgui-sfml-2.6.x\imgui-sfml-2.6.x;C:\Users\edayo\Documents\sample\imgui-sfml-2.6.x\imgui-sfml-2.6.x;C:\Users\edayo\Documents\sample\imgui-master\imgui-master;C:\Users\edayo\Documents\sample\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\lizet\source\repos\ParticleSimulator-CPP_DIST_PART_BRANCH\imgui-sfml-2.6.x\imgui-sfml-2.6.x;C:\Users\lizet\source\repos\ParticleSimulator-CPP_DIST_PART_BRANCH\imgui-master\imgui-master;C:\Users\lizet\source\repos\ParticleSimulator-CPP_DIST_PART_BRANCH\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;C:\Users\Angel\Desktop\PSET3\ParticleSimulator-CPP\imgui-sfml-2.6.x\imgui-sfml-2.6.x;C:\Users\Angel\Desktop\STDISCM\Project2\imgui-master\imgui-master;C:\Users\Angel\Desktop\PSET3\ParticleSimulator-CPP\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Angel\Desktop\PSET3\ParticleSimulator-CPP\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\lib;C:\Users\edayo\Documents\sample\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>sfml-graphics.lib;sfml-window.lib;sfml-system.lib;opengl32.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\lizet\source\repos\ParticleSimulator-CPP_DIST_PART_BRANCH\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\lib;C:\Users\Angel\Desktop\PSET3\ParticleSimulator-CPP\SFML-2.6.1-windows-vc17-64-bit\SFML-2.6.1\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>sfml-graphics.lib;sfml-window.lib;sfml-system.lib;sfml-network.lib;opengl32.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
